Added skills block

--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
                   </div>
                 </div>
               </div>
+
+              <div class="container">
+                <div class="resume__block">
+                  <div class="skills">
+                    <h3 class="skills__header">Skills</h3>
+                    <p class="skills__text">Attention to Detail,Analytical Thinking, Communication, Problem-Solving,
+                      Time Management, Teamwork, Adaptability, Critical Thinking, Patience, Curiosity</p>
+                  </div>
+                </div>
+              </div>
+
               <a href="" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg
