Changes in file index.html

--- a/index.html
+++ b/index.html
@@ -24,47 +24,8 @@
                   alt="Avatar"
                 />
               </div>
-              <div class="container">
-                <div class="resume__block">
-                  <div class="intro">
-                    <div class="intro__icon-wrapper">
-                      <svg
-                        class="intro__icon"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 512 512"
-                      >
-                        <path
-                          d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7
-                          24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0
-                          26.5 21.5 48 48 48h128c26.5 0 48-21.5
-                          48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64
-                          64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6
-                          32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5
-                          48-48V304c0-26.5-21.5-48-48-48z"
-                        ></path>
-                      </svg>
-                    </div>
-                    <p class="intro_text">
-                      I'm Lilia, I’m a junior QA professional looking to start my career in quality assurance. 
-                      I’m excited to learn and apply testing skills to help improve software quality. 
-                      Even though I don’t have work experience yet, I’m committed to growing my skills
-                      and contributing to a great team. I’m here to learn and help ensure products work well for users.
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="container">
-                <div class="resume__block">
-                  <div class="skills">
-                    <h3 class="skills__header">Skills</h3>
-                    <p class="skills__text">Attention to Detail,Analytical Thinking, Communication, Problem-Solving,
-                      Time Management, Teamwork, Adaptability, Critical Thinking, Patience, Curiosity</p>
-                  </div>
-                </div>
-              </div>
-
-              <a href="" rel="author" class="contact-info__item">
+              
+                            <a href="" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg
                     class="contact-info__item-icon"
@@ -107,6 +68,47 @@
               </a>
               <div class="contact-info__block"></div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="resume__block">
+          <div class="intro">
+            <div class="intro__icon-wrapper">
+              <svg
+                class="intro__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"
+              >
+                <path
+                  d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7
+                  24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0
+                  26.5 21.5 48 48 48h128c26.5 0 48-21.5
+                  48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64
+                  64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6
+                  32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5
+                  48-48V304c0-26.5-21.5-48-48-48z"
+                ></path>
+              </svg>
+            </div>
+            <p class="intro_text">
+              I’m a junior QA professional looking to start my career in quality assurance. 
+              I’m excited to learn and apply testing skills to help improve software quality. 
+              Even though I don’t have work experience yet, I’m committed to growing my skills
+              and contributing to a great team. I’m here to learn and help ensure products work well for users.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="resume__block">
+          <div class="skills">
+            <h3 class="skills__header">Skills</h3>
+            <p class="skills__text">
+              Attention to Detail, Analytical Thinking, Communication, Problem-Solving, 
+              Time Management, Teamwork, Adaptability, Critical Thinking, Patience, Curiosity
+            </p>
           </div>
         </div>
       </div>
