Added experiences block

--- a/index.html
+++ b/index.html
@@ -113,7 +113,52 @@
         </div>
       </div>
 
-      
+      <div class="main-info">
+        <div class="experiences">
+          <h3 class="experiences__header">Experience</h3>
+          <div class="experiences__company">
+            <div class="experiences__company-header">
+              <span class="experiences__company-header-durability">2023-Present</span>
+              <h3 class="experiences__company-header-name">Time for developing my skills and preparing for new opportunities</h3>
+            </div>
+
+            <div class="experiences__company-project">
+              <span class="experiences__company-project-role">Aspiring Junior QA Engineer</span>
+              <h3 class="experiences__company-project-name">Time for self-development</h3>
+              <ul class="experiences__company-project-responsibilities">
+                <li>Dedicated time to improving QA skills and learning best practices in software testing</li>
+                <li>Engaged in self-study and online courses to enhance knowledge of testing methodologies, tools, and techniques.</li>
+                <li>Prepared for future professional opportunities by gaining a deeper understanding of quality assurance and related fields</li>
+              </ul>
+            </div>
+
+            <div class="experiences__company">
+              <div class="experiences__company-header">
+                <span class="experiences__company-header-durability">2015-2023</span>
+                <h3 class="experiences__company-header-name">Nano Inductor LLC</h3>
+              </div>
+  
+              <div class="experiences__company-project">
+                <span class="experiences__company-project-role">An engineer</span>
+                <h3 class="experiences__company-project-name">Infrared dryers</h3>
+                <ul class="experiences__company-project-responsibilities">
+                  <li>Requirement analysis</li>
+                  <li>3D modeling</li>
+                  <li>Technical documentation development</li>
+                  <li>Specification writing</li>
+                  <li>Engineering support</li>
+                  <li>Making changes to the project</li>
+                </ul>
+              </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+
     </main>
 
   </body>
