Added and edited education block

--- a/index.html
+++ b/index.html
@@ -170,8 +170,13 @@
          </div>
          <div class="additional-info__education-university">
           <span class="additional-info__education-university-durability">2015</span>
-          <h3 class="additional-info__education-university-speciality"> QA courses "Основи тестування "</h3>
+          <h3 class="additional-info__education-university-speciality"> QA courses "Основи тестування програмного забезпечення"</h3>
           <p class="additional-info__education-university-name"> Prometeus      </p>
+         </div>
+         <div class="additional-info__education-university">
+          <span class="additional-info__education-university-durability">2009</span>
+          <h3 class="additional-info__education-university-speciality"> Computer Machine Building Industry</h3>
+          <p class="additional-info__education-university-name"> Ivano-Frankivsk National Technical Univesity of Oil and Gas     </p>
          </div>
         </div>
       </div>
