--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <div class="contact-info__block contact-info__block--center">
                 <img
                   class="contact-info__avatar"
-                  src="assets/avatar.png" 
+                  src="assets/Avatar.png" 
                   alt="Avatar"
                 />
               </div>
